@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-noinst_LIBRARIES = libspecsysinfo.a 
+noinst_LIBRARIES = libspecsysinfo.a
 
 libspecsysinfo_a_CFLAGS = -I@top_srcdir@/src/zabbix_agent/
 
